<?xml version="1.0" encoding="utf-8"?>

<!--MIT License-->

<!--Copyright (c) 2019 Thales DIS-->

<!--Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated-->
<!--documentation files (the "Software"), to deal in the Software without restriction, including without limitation the-->
<!--rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to-->
<!--permit persons to whom the Software is furnished to do so, subject to the following conditions:-->

<!--The above copyright notice and this permission notice shall be included in all copies or substantial portions of the-->
<!--Software.-->

<!--THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE-->
<!--WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR-->
<!--COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR-->
<!--OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.-->

<!--IMPORTANT: This source code is intended to serve training information purposes only.-->
<!--Please make sure to review our IdCloud documentation, including security guidelines.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_gradient_primary"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_nfc_scan_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:layout_gravity="center"
        android:gravity="start"
        android:textSize="@dimen/dimensionTextSizeHeader"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/fragment_nfc_scan_caption" />


    <TextView
        android:id="@+id/fragment_nfc_scan_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/fragment_nfc_scan_description_wait" />

    <ProgressBar
        android:id="@+id/fragment_nfc_scan_hourglass"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="bottom"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/fragment_nfc_scan_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/fragment_nfc_scan_global_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:progress="0"/>
        <TextView
            android:id="@+id/fragment_nfc_step_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/fragment_nfc_scan_description_step" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_nfc_scan_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/fragment_nfc_scan_button_cancel"
        style="@style/AppTheme.Button"
        android:layout_marginBottom="@dimen/dimensionMarginBig"
        android:text="@string/fragment_nfc_scan_button_cancel"
        android:visibility="visible"/>
    <LinearLayout
        android:id="@+id/fragment_nfc_scan_layout_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/fragment_nfc_scan_button_retry"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/dimensionMarginBig"
            android:text="@string/button_retry"/>
        <Button
            android:id="@+id/fragment_nfc_scan_button_abort"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/dimensionMarginBig"
            android:text="@string/button_new_doc"/>
    </LinearLayout>

</LinearLayout>