<?xml version="1.0" encoding="utf-8"?>

<!--MIT License-->

<!--Copyright (c) 2019 Thales DIS-->

<!--Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated-->
<!--documentation files (the "Software"), to deal in the Software without restriction, including without limitation the-->
<!--rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to-->
<!--permit persons to whom the Software is furnished to do so, subject to the following conditions:-->

<!--The above copyright notice and this permission notice shall be included in all copies or substantial portions of the-->
<!--Software.-->

<!--THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE-->
<!--WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR-->
<!--COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR-->
<!--OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.-->

<!--IMPORTANT: This source code is intended to serve training information purposes only.-->
<!--Please make sure to review our IdCloud documentation, including security guidelines.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_gradient_primary"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_scan_doc_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/dimensionTextSizeHeader"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/STRING_KYC_DOC_SCAN_CAPTION_IDCARD" />

    <TextView
        android:id="@+id/fragment_scan_doc_description_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/STRING_KYC_DOC_SCAN_01" />

    <ImageView
        android:id="@+id/fragment_scan_doc_image_01"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:contentDescription="@android:string/untitled"
        android:adjustViewBounds="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/fragment_scan_doc_description_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/STRING_KYC_DOC_SCAN_02" />

    <ImageView
        android:id="@+id/fragment_scan_doc_image_02"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:contentDescription="@android:string/untitled"
        android:adjustViewBounds="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic"/>

    <Button
        android:id="@+id/fragment_scan_doc_button_next"
        style="@style/AppTheme.Button"
        android:layout_marginBottom="@dimen/dimensionMarginBig"
        android:text="@string/button_next"/>

</LinearLayout>